[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
colored = "2"
jsonxf = "1.1.1"
mime = "0.3.17"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
syntect = "5"
tokio = { version = "1.39", features = ["full"] }
